<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meta</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo_meta">WELCOME META PROJECT</string>
    <string name="add_meta_button">Add Meta</string>
    <string name="list_meta_button">List Metas</string>
    <string name="name_field">Name</string>
    <string name="description_field">Description</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="save_meta_button">Save</string>
    <string name="cancel_meta_button">Cancel</string>
    <string name="addPath">Add Path</string>
    <string name="origin">Origin:</string>
    <string name="destination">Destination:</string>
    <string name="routeButton">Route View</string>

</resources>
