<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/name_field"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description_field"
        android:inputType="textMultiLine" />

    <CheckBox
        android:id="@+id/checkAddPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPath" />

    <LinearLayout
        android:id="@+id/contentPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible" >
		
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origin"/>
        
        <EditText
            android:id="@+id/editTextOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text">

            <requestFocus />
        </EditText>

        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination"/>
        <EditText
            android:id="@+id/editTextDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text">

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save_meta_button" android:id="@+id/btnSave"/>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel_meta_button" android:id="@+id/btnCancel"/>

</LinearLayout>